--- a/src/pages/update_task/UpdateTask.css
+++ b/src/pages/update_task/UpdateTask.css
@@ -1,7 +1,7 @@
 .update-task-section{
     height: 100vh;
     display: flex;
-    justify-content: center;
+    padding: 2rem 0rem;
     align-items: center;
     flex-direction: column;
     gap: 2rem;
